- Moodle upgraded to from 3.1.6 (Trello #1591)
- mod/hvp: Updated to from 1.2 and fixed bug when downloading (Trello #1584)
- Updated all related wiris plugins
- mod/jclic: redesigned edit form parameters and replaced .jclic.zip references in some translations (Trello #1554)
- Updated mod/hotpot
- Removed progress block (Trello #1503)
- Updated LangPacks
- Updated report/coursequotas


Changes 17.04.24
---------------------------------------------------------------------------------------
- Updated mod/hotpot
- Updated all related wiris plugins
- Updated LangPacks
- Added Vicens Vives modules: one course format, two blocks and a local (Trello #1331)
- Added H5P module (Trello #1571)
- JClic: Fixed bug with time conversion


Changes 17.03.28
---------------------------------------------------------------------------------------
- Moodle upgraded to from 3.1.5 (Trello #1553)
- Updated all related wiris plugins (Trello #1560)
- Updated local/mobile
- Updated mod/hotpot
- Updated local/agora
- Updated LangPacks


Changes 17.02.13
---------------------------------------------------------------------------------------
- mod/jclic: Changed default report to detailed
- local/alexandriaimported: Reviewed some Catalan string
- Updated LangPacks


Changes 17.01.16
---------------------------------------------------------------------------------------
- Moodle upgraded to from 3.1.4 (Trello #1455)
- Updated filter/wiris and atto/wiris
- Updated local/alexandriaimporter: Repaired load more button
- Updated local/mobile
- Updated mod/questionnaire
- Updated mod/choicegroup
- Added completion progress bar block (block_completion_progress) to replace progress bar block
- Updated LangPacks


Changes 16.10.24
---------------------------------------------------------------------------------------
- mod/assign: Filtering in Assignment grading interface throws a javascript error - MDL-56300 (Trello #1392)